# Typedb-MCP-Server

./: .dockerignore  .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONFIGURATION_ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.mock-oauth2  ENV_MIGRATION_GUIDE.md  LICENSE  README.docker.md  README.md  SECURITY_AUDIT_RESULTS.md  clippy.toml  clippy.toml.backup-20250525_074301  config.dev.toml  config.example.toml  config.test.toml  debug_test.sh  debug_test_fast.sh  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  llm.txt  mock_jwks.json  monitor_detailed.sh  monitor_test.sh  rustfmt.toml  typedb_mcp_server_config.toml  validation_report_20250525_202310.md  validation_report_20250525_202349.md  validation_report_20250525_202647.md  validation_report_20250525_203024.md  vault-agent-config.hcl
benches/: performance_benchmarks.rs
configs/: .env.example  typedb_mcp_server_config.toml
docs/: .instructions.md  BENCHMARKING.md  FAQ.md  PERFORMANCE_OPTIMIZATION_REPORT.md  architecture.md  index.md
docs/debugging_sessions/: tls_certificate_permissions_fix_2025-05-27.md  tracing_import_compilation_error_fix_2025-05-28.md
docs/developer_guide/: 01_introduction.md  02_development_setup.md  03_architecture_deep_dive.md  04_code_structure.md  05_adding_new_mcp_tools.md  06_working_with_auth.md  07_metrics_and_tracing.md  08_testing_strategy.md  09_docker_for_development.md  test_optimization_strategy.md
docs/knowledge_base/: README.md  docker_healthcheck_tls_episode.md  docker_tls_patterns.md  docker_tls_permissions_episode.md
docs/reference/: SECURITY_AUDIT_README.txt  api.md  configuration.md  metrics_list.md  security_audit_status.md
docs/user_guide/: 01_introduction.md  02_prerequisites.md  03_installation.md  04_configuration.md  05_running_the_server.md  06_connecting_clients.md  07_mcp_tools_overview.md  08_observability.md  09_security_basics.md  10_troubleshooting.md
infra/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
project_info/: AJUSTES_AMBIENTE_TESTE_2025-05-19.md  PLANO_DEPURACAO_TESTES.md  PLANO_TESTES_CONFIG.md  REFACTORING_INTEGRATION_TESTS.md
scripts/: ai-memory-validator.sh  buildx-multiplatform.sh  coverage.sh  create-and-activate-swap.sh  docker-test-optimizer.sh  error-analysis.sh  error-capture.sh  error-prevention.sh  error-registry.sh  generate-dev-certs.sh  generate-test-certs.sh  init-vault-test.sh  large-changes-detector.sh  nginx-mock-oauth2.conf  run-benchmarks.sh  run-mock-oauth2.sh  setup-full-ecosystem-vault.sh
src/: .instructions.md  auth.rs  config.rs  db.rs  error.rs  error_registry.rs  lib.rs  main.rs  mcp_service_handler.rs  metrics.rs  resources.rs  telemetry.rs  transport.rs
src/tools/: db_admin.rs  mod.rs  params.rs  query.rs  schema_ops.rs
templates/: db_password.ctmpl
test-secrets/: role_id.txt  secret_id.txt
tests/: .instructions.md  integration.rs
tests/common/: auth_helpers.rs  client.rs  constants.rs  docker_helpers.rs  infrastructure_helpers.rs  mcp_utils.rs  mod.rs  test_env.rs  test_utils.rs
tests/common/test_keys/: private_key.pem  public_key.pem
tests/integration/: cleanup_tests.rs  connection_tests.rs  db_admin_tool_tests.rs  mod.rs  observability_tests.rs  query_tool_tests.rs  resilience_tests.rs  resource_tests.rs  schema_ops_tool_tests.rs  typedb_tls_tests.rs  vault_integration_tests.rs
tests/resources/: mock_jwks.json
tests/test_configs/: default.test.toml  oauth_enabled.test.toml  server_tls.test.toml  typedb_expect_tls_got_plain.test.toml  typedb_tls_connection.test.toml  typedb_tls_wrong_ca.test.toml
typedb_sentinel/: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  pyrightconfig.json
typedb_sentinel/src/agents/: analyzer.py  planner.py  runner.py
typedb_sentinel/src/models/: plan_models.py
typedb_sentinel/src/toolkit/: typedb_toolkit.py
typedb_sentinel/src/workflows/: test_workflow.py
